--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "next": "14.2.6",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0",
+    "swiper": "^11.1.12"
   },
   "devDependencies": {
     "eslint": "^8",
