--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
     "chart.js": "^4.4.4",
+    "formik": "^2.4.6",
     "next": "14.2.6",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-flatpickr": "^3.10.13",
     "react-icons": "^5.3.0",
-    "swiper": "^11.1.12"
+    "swiper": "^11.1.12",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "eslint": "^8",
