--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "formik": "^2.4.6",
     "next": "14.2.6",
