--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-flatpickr": "^3.10.13",
     "react-icons": "^5.3.0",
     "swiper": "^11.1.12",
+    "swr": "^2.2.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
