--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # NEXT_APP_BASE_API_URL=http://192.168.29.242:5959/api/v1
-NEXT_APP_BASE_API_URL=https://api.therapist.panicle.tech/api/v1
+# NEXT_APP_BASE_API_URL=https://api.therapist.panicle.tech/api/v1
+NEXT_APP_BASE_API_URL=https://api.dev.thoughtpudding.com/api/v1
